# JetFormer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ablation_study.py  dataset.py  example_xla.py  flow.py  gemma_transformer.py  jetformer.py  pyproject.toml  requirements.txt  requirements_cuda.txt  requirements_xla.txt  test.py  test_ablation.py  train.py  transformer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
configs/: basic.yaml  evenbetter.yaml  good.yaml  smoke.yaml
eval/: run_eval.py
flow/: ablation_runner.py  ablations.yaml  accelerator_tpu.py  dataset.py  jet_flow.py  train.py
scripts/: sample_from_checkpoint.py
src/: __init__.py  ablation_study.py  accelerators.py  cli.py  dataset.py  download_tokenizer.py  gemma_transformer.py  jetformer.py  latents.py  losses.py  run_eval.py  sampling.py  tokenizer.py  train.py  train_flow.py  training_helpers.py  transformer.py  wandb_utils.py
src/configs/: __init__.py  basic.yaml  better.yaml  cifar10_32.yaml  evenbetter.yaml  flow_only_baseline.yaml  s_64.yaml  (+10 more)
tests/: __init__.py  test_attention_masks.py  test_flow_modules.py  test_gmm_numerics.py  test_kv_cache_window.py  test_parity_adaptor_and_pca.py  test_parity_gmm_and_bpd.py  test_parity_pca_loss.py  test_parity_rope_and_norms.py  test_parity_split_and_masks.py  test_pca_bpd_constants.py  test_sampling_cfg_sanitize.py  test_sampling_parity.py  test_sequence_building.py  test_special_ids_repeats.py
(+55 files in other folders)
